# MathLegend

./: .gitignore  CMakeLists.txt  PakEncryptor.cpp  README.md
Tiled/test/: mathlegendtest1.tmx  mathlegendtest2.tmx
Tiled/test2/: Undead_Land.tmx
Tiled/test3/: Cursed_land.tmx
Tiled/village/: village.tmx
include/: Animation.h  Block.h  ConfirmedRoom.h  Cursor.h  EncryptedPak.h  Entity.h  Game.h  House.h  Menu.h  Player.h  PublicResources.h  Room.h  Status.h  StatusMachine.h  TileMap.h  TiledMap.h  TrainingRoom.h  Tree.h
src/: Animation.cpp  Block.cpp  CGs.cpp  ConfirmedRoom.cpp  Cursor.cpp  Game.cpp  House.cpp  Menu.cpp  Player.cpp  TileMap.cpp  TiledMap.cpp  Tree.cpp  main.cpp
